--- a/Logical Modelling/Assessment1_code.ipynb
+++ b/Logical Modelling/Assessment1_code.ipynb
@@ -7,8 +7,7 @@
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-   ],
+   "outputs": [],
    "source": [
     "import boolean2 as b2\n",
     "import matplotlib.pyplot as plt"
@@ -44,7 +43,7 @@
     }
    ],
    "source": [
-    "#Construct a Boolean model that contains the above proteins and implements the appropriate logic rules\n",
+    "#Question 1 - Construct a Boolean model that contains the above proteins and implements the appropriate logic rules\n",
     "import boolean2\n",
     "\n",
     "model_definition = \"\"\"\n",
@@ -244,8 +243,7 @@
     "{connection_file}"
    ],
    "display_name": "Python 2",
-   "env": {
-   },
+   "env": {},
    "language": "python",
    "metadata": {
     "cocalc": {
