--- a/Visualisation/Wk7_exercise1.ipynb
+++ b/Visualisation/Wk7_exercise1.ipynb
@@ -26,7 +26,7 @@
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "import pandas as pd\n",
-    "import visualisation # some functions defined for this lab\n",
+    "import visualisation \n",
     "import plotly\n",
     "import plotly.express as px\n",
     "import plotly.graph_objs as go\n",
@@ -62,7 +62,7 @@
    ],
    "source": [
     "data = pd.read_csv('GuoData.csv', index_col=[0])\n",
-    "labels = data.index # The labels give the cell-type for each cell \n",
+    "labels = data.index \n",
     "N, D = data.shape\n",
     "print('Cells: %s, Genes: %s'%(N, D))"
    ]
@@ -1761,16 +1761,9 @@
    ],
    "source": [
     "W, scores, fracs = visualisation.do_pca(data)\n",
-    "# W - Factor loading matrix, \n",
-    "# scores - PCA scores can be used to visualise data in a lower dimensional space \n",
-    "# fracs - Eigenvalues (normalised to sum to one) give fraction of variance explained by each principal component (PC)\n",
     "\n",
     "scores = scores/abs(scores).max().max() \n",
-    "# Scale the scores by the maximum value in the score matrix so the plots look better\n",
-    "\n",
     "scores.index = labels\n",
-    "\n",
-    "#scores['label'] = labels # Add a column with labels for plotting\n",
     "\n",
     "W"
    ]
@@ -3708,8 +3701,8 @@
     }
    ],
    "source": [
-    "XPC = 'PC1' # Principal component shown on x-axis\n",
-    "YPC = 'PC4' # Principal component shown on y-axis\n",
+    "XPC = 'PC1' \n",
+    "YPC = 'PC4' \n",
     "fig = px.scatter(scores, x=XPC, y=YPC, color=labels, hover_data=[XPC,YPC])\n",
     "fig.update_traces(mode='markers', marker_line_width=1, marker_size=8)\n",
     "fig.show()\n",
@@ -4817,8 +4810,8 @@
     }
    ],
    "source": [
-    "XPC = 'PC1' # Principal component shown on x-axis\n",
-    "YPC = 'PC3' # Principal component shown on y-axis\n",
+    "XPC = 'PC1' \n",
+    "YPC = 'PC3' \n",
     "fig = px.scatter(scores, x=XPC, y=YPC, color=labels, hover_data=[XPC,YPC])\n",
     "fig.update_traces(mode='markers', marker_line_width=1, marker_size=8)\n",
     "fig.show()\n",
