--- a/Visualisation/Wk7_exercise2.ipynb
+++ b/Visualisation/Wk7_exercise2.ipynb
@@ -29,7 +29,7 @@
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "import pandas as pd\n",
-    "import visualisation # some functions defined for this lab\n",
+    "import visualisation \n",
     "import plotly\n",
     "import plotly.express as px\n",
     "import plotly.graph_objs as go"
@@ -56,7 +56,7 @@
    "outputs": [],
    "source": [
     "GuoDataAll = pd.read_csv('GuoData.csv', index_col=[0])\n",
-    "labelsAll = GuoDataAll.index # The labels give the cell-type for each cell "
+    "labelsAll = GuoDataAll.index "
    ]
   },
   {
@@ -86,7 +86,7 @@
     }
    ],
    "source": [
-    "#Take the data subsdet containing only 64 cell stage labels\n",
+    "\n",
     "frames = [GuoDataAll.iloc[labelsAll=='64 TE',:],GuoDataAll.iloc[labelsAll=='64 EPI',:],\n",
     "          GuoDataAll.iloc[labelsAll=='64 PE',:]]\n",
     "data = pd.concat(frames)\n",
@@ -466,7 +466,7 @@
     }
    ],
    "source": [
-    "data # Show the data"
+    "data "
    ]
   },
   {
@@ -1788,16 +1788,8 @@
    ],
    "source": [
     "W, scores, fracs = visualisation.do_pca(data)\n",
-    "# W - Factor loading matrix, \n",
-    "# scores - PCA scores can be used to visualise data in a lower dimensional space \n",
-    "# fracs - Eigenvalues (normalised to sum to one) give fraction of variance explained by each principal component (PC)\n",
-    "\n",
     "scores = scores/abs(scores).max().max() \n",
-    "# Scale the scores by the maximum value in the score matrix so the plots look better\n",
-    "\n",
     "scores.index = labels\n",
-    "\n",
-    "#scores['label'] = labels # Add a column with labels for plotting\n",
     "\n",
     "W"
    ]
@@ -2716,8 +2708,8 @@
    "source": [
     "#Figure 1B\n",
     "\n",
-    "XPC = 'PC1' # Principal component shown on x-axis\n",
-    "YPC = 'PC2' # Principal component shown on y-axis\n",
+    "XPC = 'PC1' \n",
+    "YPC = 'PC2' \n",
     "fig = px.scatter(scores, x=XPC, y=YPC, color=labels, hover_data=[XPC,YPC])\n",
     "fig.update_traces(mode='markers', marker_line_width=1, marker_size=8)\n",
     "fig.show()"
@@ -4849,8 +4841,8 @@
     }
    ],
    "source": [
-    "XPC = 'PC1' # Principal component shown on x-axis\n",
-    "YPC = 'PC2' # Principal component shown on y-axis\n",
+    "XPC = 'PC1' \n",
+    "YPC = 'PC2' \n",
     "genelabels = W.index\n",
     "fig = px.scatter(W, x=XPC, y=YPC,color = genelabels, hover_data=[XPC,YPC])\n",
     "fig.update_traces(mode='markers', marker_line_width=1, marker_size=8)\n",
